# opencv_leaf_recognition

./: .gitignore  CMakeLists.txt  DeepPlant_opencv_sample.sh  LeafNet_opencv_sample.sh  README.md  requirements.txt
inc/: class_labels.hpp
src/: DeepPlant_predict.cpp  LeafNet_predict.cpp  LeafNet_predict.py  class_labels.cpp
